# Back-End-PjgPlantas

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
PJGPlantas/: asgi.py  settings.py  urls.py  wsgi.py
pjgplantas/: admin.py  models.py
pjgplantas/migrations/: 0001_initial.py
